opam-version: "2.0"
version: "0.4.2"
synopsis: "Opam solver using 0install backend using the CUDF interface"
description: """
Opam's default solver is designed to maintain a set of packages
over time, minimising disruption when installing new programs and
finding a compromise solution across all packages.

In many situations (e.g. CI, local roots or duniverse builds) this
is not necessary, and we can get a solution much faster by using
a different algorithm.

This package uses 0install's solver algorithm with opam packages using
the CUDF interface.
"""
maintainer: "Kate <kit-ty-kate@outlook.com>"
authors: "Kate <kit-ty-kate@outlook.com>"
license: "ISC"
homepage: "https://github.com/ocaml-opam/opam-0install-cudf"
doc: "https://ocaml-opam.github.io/opam-0install-cudf/"
bug-reports: "https://github.com/ocaml-opam/opam-0install-cudf/issues"
depends: [
  "dune" {>= "2.7"}
  "cudf"
  "ocaml" {>= "4.08.0"}
  "0install-solver"
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "test" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/ocaml-opam/opam-0install-cudf.git"
